--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "NLP.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMg2F0z1TaKz2imRzc9NCdj",
+      "authorship_tag": "ABX9TyMEyIJE2pdODyLXN3ciGbOZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -128,16 +128,16 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 345
+          "height": 404
         },
         "id": "fpnEjfLvLAap",
-        "outputId": "0a545439-4498-4d0c-cf95-a3ef3ff8963c"
+        "outputId": "979b7dde-afce-403d-dd63-2a590aff9a2f"
       },
       "source": [
-        "dataset['new'] = corpus\r\n",
-        "dataset.iloc[40:50, :]"
+        "dataset['cleaned_review'] = corpus\r\n",
+        "dataset"
       ],
-      "execution_count": 114,
+      "execution_count": 126,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -164,93 +164,113 @@
               "      <th>Review</th>\n",
               "      <th>Liked</th>\n",
               "      <th>new</th>\n",
+              "      <th>cleaned_review</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>40</th>\n",
-              "      <td>The shrimp tender and moist.</td>\n",
+              "      <th>0</th>\n",
+              "      <td>Wow... Loved this place.</td>\n",
               "      <td>1</td>\n",
-              "      <td>shrimp tender moist</td>\n",
+              "      <td>wow love place</td>\n",
+              "      <td>wow love place</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>41</th>\n",
-              "      <td>There is not a deal good enough that would dra...</td>\n",
+              "      <th>1</th>\n",
+              "      <td>Crust is not good.</td>\n",
               "      <td>0</td>\n",
-              "      <td>not deal good enough would drag establish</td>\n",
+              "      <td>crust not good</td>\n",
+              "      <td>crust not good</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>42</th>\n",
-              "      <td>Hard to judge whether these sides were good be...</td>\n",
+              "      <th>2</th>\n",
+              "      <td>Not tasty and the texture was just nasty.</td>\n",
               "      <td>0</td>\n",
-              "      <td>hard judg whether side good gross melt styrofo...</td>\n",
+              "      <td>not tasti textur nasti</td>\n",
+              "      <td>not tasti textur nasti</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>43</th>\n",
-              "      <td>On a positive note, our server was very attent...</td>\n",
+              "      <th>3</th>\n",
+              "      <td>Stopped by during the late May bank holiday of...</td>\n",
               "      <td>1</td>\n",
-              "      <td>posit note server attent provid great servic</td>\n",
+              "      <td>stop late may bank holiday rick steve recommen...</td>\n",
+              "      <td>stop late may bank holiday rick steve recommen...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>44</th>\n",
-              "      <td>Frozen pucks of disgust, with some of the wors...</td>\n",
+              "      <th>4</th>\n",
+              "      <td>The selection on the menu was great and so wer...</td>\n",
+              "      <td>1</td>\n",
+              "      <td>select menu great price</td>\n",
+              "      <td>select menu great price</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>995</th>\n",
+              "      <td>I think food should have flavor and texture an...</td>\n",
               "      <td>0</td>\n",
-              "      <td>frozen puck disgust worst peopl behind regist</td>\n",
+              "      <td>think food flavor textur lack</td>\n",
+              "      <td>think food flavor textur lack</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>45</th>\n",
-              "      <td>The only thing I did like was the prime rib an...</td>\n",
-              "      <td>1</td>\n",
-              "      <td>thing like prime rib dessert section</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>46</th>\n",
-              "      <td>It's too bad the food is so damn generic.</td>\n",
+              "      <th>996</th>\n",
+              "      <td>Appetite instantly gone.</td>\n",
               "      <td>0</td>\n",
-              "      <td>bad food damn gener</td>\n",
+              "      <td>appetit instantli gone</td>\n",
+              "      <td>appetit instantli gone</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>47</th>\n",
-              "      <td>The burger is good beef, cooked just right.</td>\n",
-              "      <td>1</td>\n",
-              "      <td>burger good beef cook right</td>\n",
+              "      <th>997</th>\n",
+              "      <td>Overall I was not impressed and would not go b...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>overal not impress would not go back</td>\n",
+              "      <td>overal not impress would not go back</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>48</th>\n",
-              "      <td>If you want a sandwich just go to any Firehous...</td>\n",
-              "      <td>1</td>\n",
-              "      <td>want sandwich go firehous</td>\n",
+              "      <th>998</th>\n",
+              "      <td>The whole experience was underwhelming, and I ...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>whole experi underwhelm think go ninja sushi n...</td>\n",
+              "      <td>whole experi underwhelm think go ninja sushi n...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>49</th>\n",
-              "      <td>My side Greek salad with the Greek dressing wa...</td>\n",
-              "      <td>1</td>\n",
-              "      <td>side greek salad greek dress tasti pita hummu ...</td>\n",
+              "      <th>999</th>\n",
+              "      <td>Then, as if I hadn't wasted enough of my life ...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>wast enough life pour salt wound draw time too...</td>\n",
+              "      <td>wast enough life pour salt wound draw time too...</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
+              "<p>1000 rows × 4 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "                                               Review  ...                                                new\n",
-              "40                       The shrimp tender and moist.  ...                                shrimp tender moist\n",
-              "41  There is not a deal good enough that would dra...  ...          not deal good enough would drag establish\n",
-              "42  Hard to judge whether these sides were good be...  ...  hard judg whether side good gross melt styrofo...\n",
-              "43  On a positive note, our server was very attent...  ...       posit note server attent provid great servic\n",
-              "44  Frozen pucks of disgust, with some of the wors...  ...      frozen puck disgust worst peopl behind regist\n",
-              "45  The only thing I did like was the prime rib an...  ...               thing like prime rib dessert section\n",
-              "46          It's too bad the food is so damn generic.  ...                                bad food damn gener\n",
-              "47        The burger is good beef, cooked just right.  ...                        burger good beef cook right\n",
-              "48  If you want a sandwich just go to any Firehous...  ...                          want sandwich go firehous\n",
-              "49  My side Greek salad with the Greek dressing wa...  ...  side greek salad greek dress tasti pita hummu ...\n",
+              "                                                Review  ...                                     cleaned_review\n",
+              "0                             Wow... Loved this place.  ...                                     wow love place\n",
+              "1                                   Crust is not good.  ...                                     crust not good\n",
+              "2            Not tasty and the texture was just nasty.  ...                             not tasti textur nasti\n",
+              "3    Stopped by during the late May bank holiday of...  ...  stop late may bank holiday rick steve recommen...\n",
+              "4    The selection on the menu was great and so wer...  ...                            select menu great price\n",
+              "..                                                 ...  ...                                                ...\n",
+              "995  I think food should have flavor and texture an...  ...                      think food flavor textur lack\n",
+              "996                           Appetite instantly gone.  ...                             appetit instantli gone\n",
+              "997  Overall I was not impressed and would not go b...  ...               overal not impress would not go back\n",
+              "998  The whole experience was underwhelming, and I ...  ...  whole experi underwhelm think go ninja sushi n...\n",
+              "999  Then, as if I hadn't wasted enough of my life ...  ...  wast enough life pour salt wound draw time too...\n",
               "\n",
-              "[10 rows x 3 columns]"
+              "[1000 rows x 4 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 114
+          "execution_count": 126
         }
       ]
     },
